[workspace]

members = [
	"client", "common", "server",
]

resolver = "2" # Important! wgpu/Bevy needs this!

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
bincode = "1.3.3"
bevy = { version = "0.12.0", features = ["serialize"] }
bevy_renet = { version = "0.0.10", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }