[workspace]

members = [
	"client", "common", "server",
]

resolver = "2" # Important! wgpu/Bevy needs this!

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
# Bevy adjacent crates
bevy = { version = "0.12.0", features = ["serialize"] }
bevy_rapier2d = { version = "0.23.0", features = [ "enhanced-determinism", "debug-render-2d" ] }
bevy_renet = { version = "0.0.10", features = ["serde"] }

# Other
bincode = "1.3.3"
serde = { version = "1.0.196", features = ["derive"] }
